--- a/blogweb/app/templates/post_detail.html
+++ b/blogweb/app/templates/post_detail.html
@@ -62,7 +62,7 @@
 
 			<div class="post-detail-bottom-middle">
 
-				<div class=tabcontent-post-detail-title>
+				<div class="tabcontent-post-detail-title">
 					<div class="post-detail-title-left">
 						Forums
 					</div>
