--- a/blogweb/app/templates/messages.html
+++ b/blogweb/app/templates/messages.html
@@ -18,6 +18,8 @@
       margin: 20px 0;">
       {{ 'Messages' }}
     </h1><br>
+    {% if messages.items %}
+
     {% for post in messages %}
         {% include '_message.html' %}
     {% endfor %}
@@ -63,6 +65,11 @@
       
         </ul>
       </nav>
+      {% else %}
+      <!-- Empty page content -->
+      {% include 'empty.html' %}
+
+      {% endif %}
     </div>     
       
 {% endblock %}
