fix-limit the avatar size

--- a/blogweb/app/templates/_reply_list.html
+++ b/blogweb/app/templates/_reply_list.html
@@ -7,7 +7,7 @@
 
 <div class="reply-list">
   <div class="reply-list-left">
-    <img style="margin-left:10px" src="{{ reply.user.avatar(80) }}" crossorigin="anonymous" alt="useravatar">
+    <img style="margin-left:10px ;max-width: 80px; max-height: 80px; " src="{{ reply.user.avatar(80) }}" crossorigin="anonymous" alt="useravatar">
 
   </div>
   <div class="reply-list-middle">
