--- a/blogweb/app/templates/messages.html
+++ b/blogweb/app/templates/messages.html
@@ -3,7 +3,8 @@
 {% block content %}
 <div class="container mt-5" style="
       background-color: rgba(255, 255, 255, 0.871);
-      padding: 20px;
+      width: 60%;
+      padding: 40px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);">
       <nav aria-label="breadcrumb" >
