add the background image reference

--- a/blogweb/app/templates/references.html
+++ b/blogweb/app/templates/references.html
@@ -28,6 +28,7 @@
       <li><a href="https://www.pexels.com/photo/aerial-photography-of-pine-trees-on-the-mountain-9754/">Background-1</a></li>
       <li><a href="https://www.pexels.com/zh-cn/photo/933054/">Background-2</a></li>
       <li><a href="https://www.flaticon.com/free-icon/love_9812568">Website Icon</a></li>
+      <li><a href="https://www.pexels.com/zh-cn/photo/2303781/">Background-3</a></li>
     </ol>
     <h2>JS</h2>
     <ol>
