--- a/blogweb/app/templates/_result_list_post.html
+++ b/blogweb/app/templates/_result_list_post.html
@@ -7,7 +7,7 @@
 <div>
     <div class="result-list">
        <span>
-      <a class="result-list-text" href="{{ url_for('post_detail', post_id=result.id) }}">{{ result.title }}</a>
+      <a class="result-list-text" href="{{ url_for('main.post_detail', post_id=result.id) }}">{{ result.title }}</a>
        </span>
 
     </div>
