--- a/blogweb/app/templates/messages.html
+++ b/blogweb/app/templates/messages.html
@@ -9,7 +9,7 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);">
       <nav aria-label="breadcrumb" >
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="{{url_for('index', page=1)}}">Home Page</a></li>
+          <li class="breadcrumb-item"><a href="{{url_for('main.index', page=1)}}">Home Page</a></li>
           <li class="breadcrumb-item active" aria-current="page">Messages</li>
         </ol>
       </nav>
@@ -30,14 +30,14 @@
         <ul class="pagination justify-content-center">
       
           {% if prev_url %}
-            <li class="page-item"><a class="page-link" href="{{ url_for('messages', page=1) }}">First</a></li>
+            <li class="page-item"><a class="page-link" href="{{ url_for('main.messages', page=1) }}">First</a></li>
             <li class="page-item"><a class="page-link" href="{{ prev_url }}">Prev</a></li>
           {% else %}
             <li class="page-item disabled"><span class="page-link">First</span></li>
           {% endif %}
       
           {% if messages.page > 4 %}
-            <li class="page-item"><a class="page-link" href="{{ url_for('messages', page=1) }}">1</a></li>
+            <li class="page-item"><a class="page-link" href="{{ url_for('main.messages', page=1) }}">1</a></li>
             <li class="page-item disabled"><span class="page-link">...</span></li>
           {% endif %}
       
@@ -46,19 +46,19 @@
               {% if p == messages.page %}
                 <span class="page-link">{{ p }}</span>
               {% else %}
-                <a class="page-link" href="{{ url_for('messages', page=p) }}">{{ p }}</a>
+                <a class="page-link" href="{{ url_for('main.messages', page=p) }}">{{ p }}</a>
               {% endif %}
             </li>
           {% endfor %}
       
           {% if messages.page < messages.pages - 3 %}
             <li class="page-item disabled"><span class="page-link">...</span></li>
-            <li class="page-item"><a class="page-link" href="{{ url_for('messages', page=messages.pages) }}">{{ messages.pages }}</a></li>
+            <li class="page-item"><a class="page-link" href="{{ url_for('main.messages', page=messages.pages) }}">{{ messages.pages }}</a></li>
           {% endif %}
       
           {% if next_url %}
             <li class="page-item"><a class="page-link" href="{{ next_url }}">Next</a></li>
-            <li class="page-item"><a class="page-link" href="{{ url_for('messages', page=messages.pages) }}">Last</a></li>
+            <li class="page-item"><a class="page-link" href="{{ url_for('main.messages', page=messages.pages) }}">Last</a></li>
           {% else %}
             <li class="page-item disabled"><span class="page-link">Next</span></li>
             <li class="page-item disabled"><span class="page-link">Last</span></li>
