--- a/blogweb/app/templates/reset-request.html
+++ b/blogweb/app/templates/reset-request.html
@@ -19,7 +19,7 @@
 					<p class="reminder">
 						Cancel Reset?
 						<br>
-						<a class="flipbutton" href="{{ url_for('login') }}">Login Here</a>
+						<a class="flipbutton" href="{{ url_for('main.login') }}">Login Here</a>
 					</p>
 				</form>
 			</div>
