--- a/blogweb/app/templates/reset.html
+++ b/blogweb/app/templates/reset.html
@@ -30,7 +30,7 @@
 					<p class="reminder">
 						Successful?
 						<br>
-						<a class="flipbutton" href="{{ url_for('login') }}">Login Here</a>
+						<a class="flipbutton" href="{{ url_for('main.login') }}">Login Here</a>
 					</p>
 				</form>
 			</div>
