--- a/blogweb/app/templates/send_message.html
+++ b/blogweb/app/templates/send_message.html
@@ -8,7 +8,7 @@
 		box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
 		<nav aria-label="breadcrumb" >
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="{{url_for('index', page=1)}}">Home Page</a></li>
+				<li class="breadcrumb-item"><a href="{{url_for('main.index', page=1)}}">Home Page</a></li>
 				<li class="breadcrumb-item active" aria-current="page">Send Message</li>
 			</ol>
 		</nav>
