--- a/blogweb/app/templates/_message.html
+++ b/blogweb/app/templates/_message.html
@@ -12,7 +12,7 @@
             font-weight: bold; /* Make the username bold */
             color: #007bff; /* Bootstrap's default primary color */
             text-decoration: none; /* No underline */
-            margin-left: 10px;" href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
+            margin-left: 10px;" href="{{ url_for('main.user', username=post.author.username) }}">{{ post.author.username }}</a>
         </strong>  said:</p><p style=
         " background-color: #fff;
           padding: 15px 20px;
