--- a/blogweb/app/templates/_post_list.html
+++ b/blogweb/app/templates/_post_list.html
@@ -12,12 +12,12 @@
   <div class="post-list-middle">
     <div class="post-list-middle-content">
       <div>
-        <a class="user_popup" href="{{ url_for('user', username=post.author.username) }}">{{
+        <a class="user_popup" href="{{ url_for('main.user', username=post.author.username) }}">{{
           post.author.username }}</a>
       </div>
 
       <div class="post-list-title">
-        <a class="post-list-title-text" href="{{ url_for('post_detail', post_id=post.id) }}">{{
+        <a class="post-list-title-text" href="{{ url_for('main.post_detail', post_id=post.id) }}">{{
           post.title }}</a>
       </div>
     </div>
