--- a/blogweb/app/templates/_result_list_reply.html
+++ b/blogweb/app/templates/_result_list_reply.html
@@ -7,7 +7,7 @@
 <div>
   <div style="vertical-align: top;">
     <div class="post">
-      <a class = "post-text" href="{{ url_for('post_detail', post_id=result[2]) }}">{{ result[1] }}</a> - {{ result[0] }}
+      <a class = "post-text" href="{{ url_for('main.post_detail', post_id=result[2]) }}">{{ result[1] }}</a> - {{ result[0] }}
     </div>
   </div>
 </div>
