--- a/blogweb/app/templates/user_popup.html
+++ b/blogweb/app/templates/user_popup.html
@@ -5,7 +5,7 @@
     <img src="{{ user.avatar(64) }}" crossorigin="anonymous" style="margin: 5px; float: left; width: 80px;
     height: 80px; " alt="useravatar">
     <div class="popup-top-right">
-      <p><a href="{{ url_for('user', username=user.username) }}" style="text-decoration:none;">{{ user.username }}</a></p>
+      <p><a href="{{ url_for('main.user', username=user.username) }}" style="text-decoration:none;">{{ user.username }}</a></p>
       <span>Follower: {{user.followers_count()}} &nbsp;Following: {{user.following_count()}}</span>
     </div>
   </div>
@@ -18,14 +18,14 @@
     {% if user != current_user %}
     {% if not current_user.is_following(user) %}
     <p>
-    <form action="{{ url_for('follow', username=user.username) }}" method="post">
+    <form action="{{ url_for('main.follow', username=user.username) }}" method="post">
       {{ form.hidden_tag() }}
       {{ form.submit(value=('Follow'), class_='btn btn-outline-primary btn-sm') }}
     </form>
     
     {% else %}
     <p>
-    <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+    <form action="{{ url_for('main.unfollow', username=user.username) }}" method="post">
       {{ form.hidden_tag() }}
       {{ form.submit(value=('Unfollow'), class_='btn btn-outline-primary btn-sm') }}
     </form>
