--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -23,7 +23,7 @@
                 alt="Profile Pic">
               <h3 class="user-name">
                 <!-- User: {{ user.username }} -->
-                <span>Name:</span>
+                <span>Username:</span>
                 <span class="user-name-text" data-bs-toggle="tooltip" data-bs-title="{{ user.username }}"> {{
                   user.username }}</span>
               </h3>
