--- a/blogweb/app/templates/welcome.html
+++ b/blogweb/app/templates/welcome.html
@@ -24,7 +24,7 @@
           and find inspiration for your next journey.
           Let's explore together!</p>
         <div class="nav-btn">
-          <a href="{{ url_for('main.login') }}">Log in</a>
+          <a href="{{ url_for('main.login') }}" id="loginenter">Log in</a>
           <a href="{{ url_for('main.register') }}">Sign up</a>
         </div>
       </div>
