--- a/blogweb/app/templates/login.html
+++ b/blogweb/app/templates/login.html
@@ -36,7 +36,7 @@
 					<p class="reminder">
 						Don't have an account?
 						<br>
-						<a class="flipbutton" href="{{ url_for('main.register') }}">Register</a>
+						<a class="flipbutton" id="loginpage_registerenter" href="{{ url_for('main.register') }}">Register</a>
 					</p>
 				</form>
 			</div>
