--- a/blogweb/app/templates/404.html
+++ b/blogweb/app/templates/404.html
@@ -12,12 +12,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="{{ url_for('main', filename='404.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='404.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Creepster" >
   </head>
   <body>
     <div class="hero-image">
-      <img src="{{ url_for('main', filename='background.jpg') }}"  alt="background image">
+      <img src="{{ url_for('static', filename='background.jpg') }}"  alt="background image">
       <div class="container">
         <div id="heading-container">
           <h1 class="center-text" id="heading">404</h1>
