--- a/blogweb/app/templates/500.html
+++ b/blogweb/app/templates/500.html
@@ -12,13 +12,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<!-- Stylesheets -->
-		<link rel="stylesheet" href="{{ url_for('main', filename='500.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='500.css') }}">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<div class="full-screen">
 			<div class="hero-image">
-				<img src="{{ url_for('main', filename='background.jpg') }}" alt="background image">
+				<img src="{{ url_for('static', filename='background.jpg') }}" alt="background image">
 				<div class="container">
 					<span class="error-num">5</span>
 					<div class='eye'></div>
