--- a/tourism_forum/app/templates/references.html
+++ b/tourism_forum/app/templates/references.html
@@ -37,6 +37,7 @@
       <li><a href="https://darkmodejs.learn.uno/">Darkmode.js</a></li>
       <li><a href="https://docs.mapbox.com/mapbox-gl-js/guides/">mapbox-gl.js</a></li>
       <li><a href="https://ckeditor.com/">ckeditor</a></li>
+      <li><a href="https://chatgpt.com//">ChatGPT</a></li>    
     </ol>
   </body>
 </html>
